--- a/odoo.conf
+++ b/odoo.conf
@@ -1,5 +1,5 @@
 [options]
-addons_path = /home/odoo/addons,/home/odoo/extra
+addons_path = /odoo/odoo/addons,/odoo/enterprise
 ;admin_passwd = admin
 csv_internal_sep = ,
 data_dir = /home/odoo/.local/share/Odoo
