--- a/odoo_nginx.conf
+++ b/odoo_nginx.conf
@@ -15,7 +15,7 @@ server {
 server {
     # server port and name
 
-    server_name    odoo-hr-test.tanmeyah.lan;
+    server_name    odoo-hr-test.lan;
 
     listen 80;
     listen 443 ssl;
