--- a/new_nginx.conf
+++ b/new_nginx.conf
@@ -23,6 +23,7 @@ server {
   proxy_read_timeout 720s;
   proxy_connect_timeout 720s;
   proxy_send_timeout 720s;
+  client_max_body_size 1G;
 
   # SSL parameters
   ssl_certificate /etc/ssl/nginx/server.crt;
