--- a/new_nginx.conf
+++ b/new_nginx.conf
@@ -23,7 +23,6 @@ server {
   proxy_read_timeout 720s;
   proxy_connect_timeout 720s;
   proxy_send_timeout 720s;
-  client_max_body_size 1G;
 
   # SSL parameters
   ssl_certificate /etc/ssl/nginx/server.crt;
@@ -46,6 +45,9 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Real-IP $remote_addr;
+
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
+    proxy_cookie_flags session_id samesite=lax secure;  # requires nginx 1.19.8
   }
 
   # Redirect requests to odoo backend server
@@ -58,10 +60,8 @@ server {
     proxy_redirect off;
     proxy_pass http://odoo;
 
-    # Enable HSTS
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
-    # requires nginx 1.19.8
-    proxy_cookie_flags session_id samesite=lax secure;
+    proxy_cookie_flags session_id samesite=lax secure;  # requires nginx 1.19.8
   }
 
   # common gzip
